Fix blurry menu background.

--- a/themes/speps/static/css/main.css
+++ b/themes/speps/static/css/main.css
@@ -89,6 +89,7 @@ body, html
     display: block;
     height: 28px;
     padding: 0px 0px 0px 0px;
+    image-rendering: pixelated;
 }
 
 #header ul li a:hover .mid
